<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/toTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toTimeText"
        android:layout_alignLeft="@+id/fromTime"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/taskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/taskDescriptionText"
        android:layout_marginRight="12dp"
        android:text="" />

    <TextView
        android:id="@+id/fromTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fromTimeText"
        android:layout_alignLeft="@+id/taskDescription"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/taskDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toTimeText"
        android:layout_alignLeft="@+id/fromTimeText"
        android:layout_marginBottom="87dp"
        android:text="@string/task_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/toTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/selectedDateText"
        android:layout_alignLeft="@+id/fromTimeText"
        android:layout_marginBottom="34dp"
        android:text="@string/to_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/taskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/selectedDateText"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/fromTime"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonEmailFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_centerInParent="true"
        android:layout_marginBottom="62dp"
        android:onClick="emailFriend"
        android:text="@string/email_friend_button" />

    <TextView
        android:id="@+id/fromTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toTime"
        android:layout_alignLeft="@+id/selectedDateText"
        android:text="@string/from_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/friendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/emailText"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectedDateText"
        android:layout_below="@+id/taskDate"
        android:layout_marginTop="22dp"
        android:text="@string/task_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/selectedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/friendEmail"
        android:layout_centerVertical="true"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>